# hcfr-code

./: .gitattributes  .gitignore  AdjustMatrixDlg.cpp  AdjustMatrixDlg.h  AdvancedPropPage.cpp  AdvancedPropPage.h  AppearancePropPage.cpp  AppearancePropPage.h  CHCFR21_DEUTSCH.clw  CHCFR21_DEUTSCH.dsp  CHCFR21_DEUTSCH.rc  CHCFR21_DEUTSCH.vcproj  CHCFR21_DEUTSCH.vcxproj  CHCFR21_DEUTSCH.vcxproj.filters  CHCFR21_ENGLISH.clw  CHCFR21_ENGLISH.dsp  CHCFR21_ENGLISH.rc  CHCFR21_ENGLISH.vcproj  CHCFR21_ENGLISH.vcxproj  CHCFR21_ENGLISH.vcxproj.filters  CHCFR21_ESPANOL.dsp  CHCFR21_ESPANOL.rc  CHCFR21_ESPANOL.vcproj  CHCFR21_ESPANOL.vcxproj  CHCFR21_ESPANOL.vcxproj.filters  CHCFR21_FRANCAIS.clw  CHCFR21_FRANCAIS.dsp  CHCFR21_FRANCAIS.rc  CHCFR21_FRANCAIS.vcproj  CHCFR21_FRANCAIS.vcxproj  CHCFR21_FRANCAIS.vcxproj.filters  CHCFR21_ITALIAN.rc  CHCFR21_ITALIAN.vcxproj  CHCFR21_ITALIAN.vcxproj.filters  CHCFR21_PATTERNS.dsp  CHCFR21_PATTERNS.rc  CHCFR21_PATTERNS.vcproj  CHCFR21_PATTERNS.vcxproj  CHCFR21_PATTERNS.vcxproj.filters  COPYING.htm  (+88 more)
Tools/libusb1/: 45-Argyll.rules  55-Argyll.rules  Argyll  Argyll.usermap  ColorHug.cat  ColorHug.inf  ColorHug.sed  ColorHug_x64.cat  ColorMunki.cat  ColorMunki.inf  ColorMunki.sed  ColorMunki_x64.cat  DTP20.cat  DTP20.inf  DTP20.sed  DTP20_x64.cat  DTP92.cat  DTP92.inf  DTP92.sed  DTP92_x64.cat  DTP94.cat  DTP94.inf  DTP94.sed  DTP94_x64.cat  HCFR3.1.cat  HCFR3.1.inf  HCFR3.1.sed  HCFR3.1_x64.cat  HCFR4.0.cat  HCFR4.0.inf  HCFR4.0.sed  HCFR4.0_x64.cat  Hcfr_make_infs.cmd  Hcfr_windows_build.cmd  Huey.cat  Huey.inf  Huey.sed  Huey_x64.cat  Jamfile  (+65 more)
(+1758 files in other folders)
